v0.41.0 - Fix z-index on header button (#60)

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -91,6 +91,7 @@ $header--transparent-opacity        : 0.7;
         right: spacing();
         padding: spacing();
         position: absolute;
+        z-index: zIndex(high);
 
         .is-sticky & {
             top: -47px;
